cmake_minimum_required(VERSION 3.15)
SET(PROJECT_NAME MuteNet)
SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_VERBOSE_MAKEFILE TRUE)

PROJECT(${PROJECT_NAME})
ADD_SUBDIRECTORY(src)

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 0)


# 출력 디렉토리
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../Build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../Build)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../../Build)

