cmake_minimum_required(VERSION 3.15)
SET(PROJECT_NAME MuteNetServerTest)
SET(CMAKE_CXX_STANDARD 17)


SET(SRC_FILES )

PROJECT(${PROJECT_NAME})
SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 0)

SET(MUTENET_LOCATION ../MuteNet/Build)
SET(MUTENET_FOUNDATION_LOCATION ../Foundation/Build)

ADD_SUBDIRECTORY(${MUTENET_FOUNDATION_LOCATION} ../Foundation/Build)
ADD_SUBDIRECTORY(${MUTENET_LOCATION} ../MuteNet/Build)

# 출력 디렉토리
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../Build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../Build)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../Build)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${TBB_LIBRARIES} ${MUTENET_FOUNDATION_LOCATION} ${MUTENET_LOCATION})