IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    ADD_DEFINITIONS(-DIOCONTEXT_KQUEUE)
    ADD_DEFINITIONS(-DAPPLE)
    INCLUDE_DIRECTORIES(/usr/local/include)
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    ADD_DEFINITIONS(-DIOCONTEXT_EPOLL)
    ADD_DEFINITIONS(-DLINUX)
ELSEIF(WIN32)
    ADD_DEFINITIONS(-DIOCONTEXT_IOCP)
ENDIF()

FILE(GLOB APP_SOURCE "*.hpp" "*.h" "*.cpp")
ADD_LIBRARY(${CMAKE_PROJECT_NAME} ${APP_SOURCE})


message("mysub:	CMAKE_SOURCE_DIR		= ${CMAKE_SOURCE_DIR}")
message("mysub:	CMAKE_BINARY_DIR		= ${CMAKE_BINARY_DIR}")
message("mysub:	CMAKE_CURRENT_SOURCE_DIR	= ${CMAKE_CURRENT_SOURCE_DIR}")
message("mysub:	CMAKE_CURRENT_BINARY_DIR	= ${CMAKE_CURRENT_BINARY_DIR}")

